--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
                 <a href="">Conheça o App</a>
                 <a href="">Funcionalidades</a>
                 <a href="">Planos e Preços</a>
-                <a href="">Baixar Agora</a>
+                <a href="" class="botao-branco">Baixar Agora</a>
             </nav>
         </div>
     </header>
 
     <main>
-        <section>
-            <img src="static/img/musica.png" alt="Música">
-            <h1>Quem canta seus males espanta</h1>
-            <h2>Cantar nunca foi tão fácil</h2>
-            <div>
-                <a href="">Ver planos</a>
-                <a href="">Baixar agora</a>
+        <section class="banner">
+            <div class="container d-flex column center">
+                <img src="static/img/musica.png" alt="Música">
+                <h1>Quem canta seus males espanta</h1>
+                <h2>Cantar nunca foi tão fácil</h2>
+                <div>
+                    <a href="">Ver planos</a>
+                    <a href="" class="botao-branco">Baixar agora</a>
+                </div>
             </div>
         </section>
 
